# SimpleGenericRtp

./: CMakeLists.txt  README.md
include/streamers/: BasicRtpStreamer.h  BasicUdpStreamer.h  IComunicationObject.h
include/udp/: BasicUdpStreamer.h  IComunicationObject.h  IUdpObject.h
src/: BasicRtpStreamer.cpp  BasicUdpStreamer.cpp  IComunicationObject.cpp
tester/: udpTester.cpp
